# Placement_Plugin

./: ai-plugin.json  main.py  plugin_queries.py  requirements.txt  web_scraper.py
Web_Scraper/: CONSTANTS.py  add_placements_to_db.py
api/: pyproject.toml
api/src/api/: __init__.py
